# Pathify

./: .gitignore  AStar.cpp  AStar.h  Dijkstras.h  Filtered_Properties.csv  Makefile  Node.h  PreprocessDataset  PreprocessDataset.cpp  Processed_DSA_Dataset.csv  Property.h  README.md  ReadCSV.cpp  ReadCSV.h  main  main.cpp
ClionImplementation/: AStar.cpp  AStar.h  CMakeLists.txt  Dijkstras.cpp  Dijkstras.h  Haversine.h  Makefile  Node.h  Property.h  ReadCSV.cpp  Utilities.cpp  Utilities.h  main.cpp
crowTest/: CMakeLists.txt  crow_all.h  main.cpp
my-app/: package-lock.json  package.json  tailwind.config.js
my-app/public/: index.html
my-app/server/: package-lock.json  server.js
my-app/src/: App.js
my-app/src/components/: Header.jsx  Home.jsx  Map.jsx  PathPage.jsx  Search.jsx
myenv/: pyvenv.cfg
oldImplementation(notUpdated/: AStar.h  CMakeLists.txt  Dijkstras.cpp  Haversine.cpp  Processed_DSA_Dataset.csv  ReadCSV.cpp  reverse_geocode.py  saudi_cities.json
